# performance

./: .gitignore  pyproject.toml
part1/: instruction_decoder.py  listing add sub cmp jnz-result.asm
part1/DONE/: listing_0039_more_movs-result.asm
part2/: listing_0065_haversine_formula.py  listing_0066_haversine_generator_main.py
part2/rust-parser/: Cargo.toml  fault_counter_backward.csv  setup-110.lldb  setup-parser.lldb
part2/rust-parser/src/: json_generator.rs  json_parser.rs  listing_0065_haversine_formula.rs  listing_0102_read_overhead_test.rs  listing_0106_mallocread_overhead_test.rs  listing_0110_pagefault_overhead_test.rs  listing_0112_os_fault_counter_main.rs  main.rs  naive_profiler.rs  perf_metrics.rs  repetition_tester.rs
part3/perf_course/: Cargo.toml  build.rs  run.zsh  setup-133.lldb
part3/perf_course/asm/: build.zsh  listing_0132_nop_loop.asm  listing_0134_multinop_loops.asm  listing_0139_jump_alignment.asm  listing_0144_read_unroll.asm  listing_0150_read_widths.asm  listing_0152_cache_size.asm  listing_0157_cache_set.asm
part3/perf_course/src/: lib.rs  perf_metrics.rs  repetition_tester.rs
part4/zig/: \  build.zig
part4/zig/src/: arcsine-coefficients.zig  haversine.zig  json-generator.zig  json-parser.zig  json_generator.zig  (+19 more)
part5/: build.zig  build.zig.zon
part5/src/: haversine.zig  json-generator.zig  json-parser.zig  listing-194.zig  listing-198.zig  listing-202.zig  main.zig  perf-metrics.zig  profiler.zig  range-tester.zig  repetition-tester.zig
performance.xcodeproj/: project.pbxproj
shared/: cpp_shared_library_test.cpp
(+1 files in other folders)
