[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu-time = "1.0.0"
rand = "0.8.4"
once_cell = "1.19.0"
mach = "0.3.2"
libc = "0.2.154"
memmap2 = "0.9.4"

[features]
profiler = []

[profile.dev]
opt-level = 1
